; ModuleID = '/home/carl/AnghaBench/8cc/extr_cpp.c_read_ifdef.c'
source_filename = "/home/carl/AnghaBench/8cc/extr_cpp.c_read_ifdef.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i64, i32 }

@TIDENT = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [32 x i8] c"identifier expected, but got %s\00", align 1
@macros = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @read_ifdef to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @read_ifdef() #0 {
  %1 = alloca %struct.TYPE_5__*, align 8
  %2 = call %struct.TYPE_5__* (...) @lex()
  store %struct.TYPE_5__* %2, %struct.TYPE_5__** %1, align 8
  %3 = load %struct.TYPE_5__*, %struct.TYPE_5__** %1, align 8
  %4 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %3, i32 0, i32 0
  %5 = load i64, i64* %4, align 8
  %6 = load i64, i64* @TIDENT, align 8
  %7 = icmp ne i64 %5, %6
  br i1 %7, label %8, label %13

8:                                                ; preds = %0
  %9 = load %struct.TYPE_5__*, %struct.TYPE_5__** %1, align 8
  %10 = load %struct.TYPE_5__*, %struct.TYPE_5__** %1, align 8
  %11 = call i32 @tok2s(%struct.TYPE_5__* %10)
  %12 = call i32 @errort(%struct.TYPE_5__* %9, i8* getelementptr inbounds ([32 x i8], [32 x i8]* @.str, i64 0, i64 0), i32 %11)
  br label %13

13:                                               ; preds = %8, %0
  %14 = call i32 (...) @expect_newline()
  %15 = load i32, i32* @macros, align 4
  %16 = load %struct.TYPE_5__*, %struct.TYPE_5__** %1, align 8
  %17 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %16, i32 0, i32 1
  %18 = load i32, i32* %17, align 8
  %19 = call i32 @map_get(i32 %15, i32 %18)
  %20 = call i32 @do_read_if(i32 %19)
  ret void
}

declare dso_local %struct.TYPE_5__* @lex(...) #1

declare dso_local i32 @errort(%struct.TYPE_5__*, i8*, i32) #1

declare dso_local i32 @tok2s(%struct.TYPE_5__*) #1

declare dso_local i32 @expect_newline(...) #1

declare dso_local i32 @do_read_if(i32) #1

declare dso_local i32 @map_get(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
